# CP_Contest

./: hello.py  pyproject.toml
CodeChef/Starters_166_Div_4/: Chefland_Library.cpp  Christmas_Gifts.cpp  Merry_Christmas.cpp  hello.py  pyproject.toml
CodeChef/Starters_166_Div_4/.cph/: .Chefland_Library.cpp_000268b5266ef2e40e34bf5983899711.prob  .Christmas_Gifts.cpp_586d96798abdd2c518161f8b25434e12.prob  .Merry_Christmas.cpp_08d9b6b4d536a5f62e8f98b9a1614935.prob
CodeForces/Global_Round_28/: A_Kevin_and_Combination_Lock.cpp  B_Kevin_and_Permutation.cpp  hello.py  pyproject.toml  test.cpp
CodeForces/Global_Round_28/.cph/: .A_Kevin_and_Combination_Lock.cpp_7fc04d691c384fdbfe1a9215dd688c5e.prob  .B_Kevin_and_Permutation.cpp_6c3eb0455b752e770d102da5bdbe9328.prob  (+1 more)
CodeForces/Hello_2025/: hello.py  pyproject.toml
CodeForces/Round_993_Div_4/: A_Easy_Problem.cpp  B_Normal_Problem.cpp  C_Hard_Problem.cpp  D_Harder_Problem.cpp  E_Insane_Problem  E_Insane_Problem.cpp  G_1_Medium_Demon_Problem_easy_version.cpp  code.cpp  test.py  test.txt
CodeForces/Round_994_Div_2/: A_MEX_Destruction.cpp  hello.py  pyproject.toml  test.cpp
CodeForces/Round_995_Div_3/: A_Preparing_for_the_Olympiad.cpp  B_Journey.cpp  C_Preparing_for_the_Exam.cpp  D_Counting_Pairs.cpp  hello.py  pyproject.toml
CodeForces/Round_995_Div_3/.cph/: .A_Preparing_for_the_Olympiad.cpp_45282ad3c25fd71567cec191170ccc26.prob  .B_Journey.cpp_49d12a079c466e409d7a66ffa9cb75af.prob  .C_Preparing_for_the_Exam.cpp_3a14b864a52b7c43bc2d0500f6e236a9.prob  .D_Counting_Pairs.cpp_1dd1b561cd9de503e324d73f26b83744.prob
(+22 files in other folders)
