[project]
name = "round-995-div-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.0",
    "pycpptest",
    "scipy>=1.14.1",
]

[tool.uv.sources]
pycpptest = { git = "https://github.com/omarfarukof/pycpptest" }
